#998: Integrate UfedModelHandler in UfedXmlReader and render chats using model POJOs